# fast-api-learning

./: Makefile  README.md  fixtures.py  main.py  pyproject.toml
base/: settings.py
handlers/: __init__.py  tasks.py
schema/: task.py
