[tool.poetry]
name = "fast-api-learning"
version = "0.1.0"
description = ""
authors = ["Alexander Scherbakov <webmasterdracarys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
